WCAG: Shipment details

--- a/src/Smartstore.Web/Views/Order/Details.cshtml
+++ b/src/Smartstore.Web/Views/Order/Details.cshtml
@@ -439,7 +439,7 @@
                 <div class="shipments-box table-responsive">
                     <table class="table mb-0">
                         <caption class="sr-only">@T("Order.Shipments")</caption>
-                        <thead style="border-bottom:hidden;">
+                        <thead>
                             <tr>
                                 <th scope="col">@T("Order.Shipments.ID")</th>
                                 <th scope="col">@T("Order.Shipments.TrackingNumber")</th>
@@ -495,7 +495,7 @@
                 <div class="ordernotes-box table-responsive">
                     <table class="table mb-0">
                         <caption class="sr-only">@T("Order.Notes")</caption>
-                        <thead style="border-bottom:hidden;">
+                        <thead>
                             <tr>
                                 <th scope="col">@T("Order.Notes.CreatedOn")</th>
                                 <th scope="col">@T("Order.Notes.Note")</th>
