WCAG: Removed user-scalable=no

--- a/src/Smartstore.Web/Views/Install/Index.cshtml
+++ b/src/Smartstore.Web/Views/Install/Index.cshtml
@@ -21,7 +21,7 @@
 <head>
     <meta charset="utf-8">
     <title>@T("Title")</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta property="sm:root" content="@Url.Content("~/")" />
 
     <script>
